--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "hunger-kings-2",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
-  },
+ "scripts": {
+  "dev": "next dev --turbopack -p 4000",
+  "build": "next build",
+  "start": "next start "
+},
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
