--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "^4.3.0",
     "next": "15.5.2",
     "react": "19.1.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "19.1.0",
     "sharp": "^0.34.3"
   },
