--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start "
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "debug": "^4.3.0",
     "next": "15.5.2",
     "react": "19.1.0",
